Initial MtlReader refactoring